# simpleChat

./: .cz.toml  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  fabfile.py  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: commitlint.yml  go_examines.yml  go_tests.yml  golangci_lint.yml  release.yml  staging.yml  terraform-staging.yml  terraform.yml
backend/: Makefile  README.md  exportEnvs.sh  go.mod  go.sum  main.go
backend/docker/: Dockerfile.nginx  compose.yml  nginx.conf  staging.yml
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/rest/: auth.http
backend/test/: auth_test.go  main_test.go
deployment/: Readme.md
deployment/jenkins/: Fiber.Jenkinsfile  Jenkinsfile  Jenkinsfile.Fiber  Readme.md  Vue.Jenkinsfile  exportEnvs.sh  k8s.Jenkinsfile
deployment/k8s/: backend-configmap-v1.yaml  backend-deploy.yaml  backend-hpa.yaml  backend-secret-v1.yaml  backend-service.yaml  frontend-secret-v1.yaml
deployment/staging/: main.tf  variables.tf
docker/: Dockerfile.fiber  nginx.conf
docs/: docs.go  swagger.json  swagger.yaml
frontend/: README.md  exportEnvs.sh  package-lock.json  package.json
frontend/src/: App.vue  main.js
k8s/: backend-deploy.yaml  backend-hpa.yaml  backend-service.yaml  rds-secret-v1.yaml  redis-secret-v1.yaml
pkg/repository/: roles_names.go
pkg/utils/: connection_url_builder.go  roles.go
rest/: auth.http  main.http
terraform/: .terraform.lock.hcl  Readme.md  cluster.yaml  data.tf  iam.tf  local.tf  main.tf  variables.tf
(+83 files in other folders)
